--- a/Mobile/RemoteController.UWP/App.xaml
+++ b/Mobile/RemoteController.UWP/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application
-    x:Class="JocysCom.x360ce.Mobile.RemoteController.UWP.App"
+    x:Class="JocysCom.RemoteController.UWP.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:JocysCom.x360ce.Mobile.RemoteController.UWP"
+    xmlns:local="using:JocysCom.RemoteController.UWP"
     RequestedTheme="Light">
 
 </Application>
