--- a/Mobile/RemoteController.UWP/MainPage.xaml
+++ b/Mobile/RemoteController.UWP/MainPage.xaml
@@ -1,9 +1,9 @@
 ﻿<forms:WindowsPage
-    x:Class="JocysCom.x360ce.Mobile.RemoteController.UWP.MainPage"
+    x:Class="JocysCom.RemoteController.UWP.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:forms="using:Xamarin.Forms.Platform.UWP"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:JocysCom.x360ce.Mobile.RemoteController.UWP"
+    xmlns:local="using:JocysCom.RemoteController.UWP"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
