--- a/Mobile/RemoteController/Views/MenuPage.xaml
+++ b/Mobile/RemoteController/Views/MenuPage.xaml
@@ -4,7 +4,7 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="JocysCom.x360ce.Mobile.RemoteController.Views.MenuPage"
+             x:Class="JocysCom.RemoteController.Views.MenuPage"
              Title="Menu">
              
     <StackLayout VerticalOptions="FillAndExpand">
