--- a/Mobile/RemoteController/Views/MenuPage.xaml
+++ b/Mobile/RemoteController/Views/MenuPage.xaml
@@ -11,11 +11,8 @@
         <ListView x:Name="ListViewMenu"
                     HasUnevenRows="True">
             <d:ListView.ItemsSource>
-                <x:Array Type="{x:Type x:String}">
-                    <x:String>Item 1</x:String>
-                    <x:String>Item 2</x:String>
-                </x:Array>
-            </d:ListView.ItemsSource>
+				<x:Array Type="{x:Type x:String}" />
+			</d:ListView.ItemsSource>
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
