--- a/Mobile/RemoteController/Pages/SettingsPage.xaml
+++ b/Mobile/RemoteController/Pages/SettingsPage.xaml
@@ -19,7 +19,7 @@
 				<Label x:Name="AccelerometerLabel" Text="Accelerometer" VerticalOptions="Center" HorizontalOptions="StartAndExpand"  />
 				<Switch x:Name="AccelerometerSwitch"
 					IsToggled="{Binding AccelerometerEnabled}"
-					Toggled="AccelerometerSwitch_Toggled" VerticalOptions="Center" HorizontalOptions="End"
+					VerticalOptions="Center" HorizontalOptions="End"
 			/>
 			</StackLayout>
 			<Label x:Name="AccelerometerXLabel" Text="X:" />
@@ -31,7 +31,7 @@
 				<Label x:Name="GyroscopeLabel" Text="Gyroscope" VerticalOptions="Center" HorizontalOptions="StartAndExpand"  />
 				<Switch x:Name="GyroscopeSwitch"
 					IsToggled="{Binding Options.EnableGyroscope}"
-					Toggled="GyroscopeSwitch_Toggled" VerticalOptions="Center" HorizontalOptions="End"
+					VerticalOptions="Center" HorizontalOptions="End"
 			/>
 			</StackLayout>
 			<Label x:Name="GyroscopeXLabel" Text="X:" />
@@ -43,7 +43,7 @@
 				<Label x:Name="OrientationLabel" Text="Orientation" VerticalOptions="Center" HorizontalOptions="StartAndExpand"  />
 				<Switch x:Name="OrientationSwitch"
 					IsToggled="{Binding Options.EnableOrientation}"
-					Toggled="OrientationSwitch_Toggled" VerticalOptions="Center" HorizontalOptions="End"
+					VerticalOptions="Center" HorizontalOptions="End"
 			/>
 			</StackLayout>
 			<Label x:Name="OrientationXLabel" Text="X:" />
@@ -51,17 +51,6 @@
 			<Label x:Name="OrientationZLabel" Text="Z:" />
 			<Label x:Name="OrientationWLabel" Text="W:" />
 		</StackLayout>
-		<StackLayout>
-			<StackLayout Orientation="Horizontal" Spacing="0">
-				<Label x:Name="CompassLabel" Text="Compass" VerticalOptions="Center" HorizontalOptions="StartAndExpand"  />
-				<Switch x:Name="CompassSwitch"
-					IsToggled="{Binding Options.EnableCompass}"
-					Toggled="CompassSwitch_Toggled" VerticalOptions="Center" HorizontalOptions="End"
-			/>
-			</StackLayout>
-			<Label x:Name="CompassNLabel" Text="N:" />
-		</StackLayout>
-
 		<StackLayout>
 			<StackLayout Orientation="Horizontal" Spacing="0">
 				<Label x:Name="VibrateLabel" Text="Vibrate" VerticalOptions="Center" HorizontalOptions="StartAndExpand"  />
