--- a/x360ce.App.Beta/Forms/ErrorReportWindow.xaml
+++ b/x360ce.App.Beta/Forms/ErrorReportWindow.xaml
@@ -4,10 +4,22 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:jcc="clr-namespace:JocysCom.ClassLibrary.Controls;assembly=x360ce.Engine"
-	xmlns:local="clr-namespace:x360ce.App.Forms"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	d:DesignHeight="450"
-	d:DesignWidth="800"
+	Title="X360CE - Error Report"
+	Width="600"
+	Height="480"
 	mc:Ignorable="d">
-	<jcc:ErrorReportControl x:Name="ErrorReportPanel" />
+	<Window.Resources>
+		<ResourceDictionary>
+			<ResourceDictionary.MergedDictionaries>
+				<ResourceDictionary Source="/x360ce.Engine;component/JocysCom/Controls/Themes/Default.xaml" />
+			</ResourceDictionary.MergedDictionaries>
+		</ResourceDictionary>
+	</Window.Resources>
+	<jcc:ErrorReportControl
+		x:Name="ErrorReportPanel"
+		Width="Auto"
+		Height="Auto"
+		HorizontalAlignment="Stretch"
+		VerticalAlignment="Stretch" />
 </Window>
