--- a/x360ce.App.Beta/Forms/ErrorReportWindow.xaml
+++ b/x360ce.App.Beta/Forms/ErrorReportWindow.xaml
@@ -21,5 +21,6 @@
 		Width="Auto"
 		Height="Auto"
 		HorizontalAlignment="Stretch"
-		VerticalAlignment="Stretch" />
+		VerticalAlignment="Stretch"
+		x:FieldModifier="public" />
 </Window>
