--- a/x360ce.App.Beta/Controls/XboxImageControl.xaml
+++ b/x360ce.App.Beta/Controls/XboxImageControl.xaml
@@ -3,14 +3,274 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:local="clr-namespace:x360ce.App.Controls"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"
 	mc:Ignorable="d">
-	<Grid>
+	<UserControl.Resources>
+		<ResourceDictionary>
+			<ResourceDictionary.MergedDictionaries>
+				<!--  Make sure all Viewbox'es are marked with x:Shared="False" to prevent from images dissapearing on controls.  -->
+				<ResourceDictionary Source="/x360ce;component/Resources/Icons/NavNormal.xaml" />
+				<ResourceDictionary Source="/x360ce;component/Resources/Icons/NavActive.xaml" />
+				<ResourceDictionary Source="/x360ce;component/Resources/Icons/NavRecord.xaml" />
+				<ResourceDictionary>
+					<Style x:Key="Base" TargetType="{x:Type Button}">
+						<Setter Property="Template">
+							<Setter.Value>
+								<ControlTemplate TargetType="{x:Type Button}">
+									<ContentPresenter />
+								</ControlTemplate>
+							</Setter.Value>
+						</Setter>
+					</Style>
+					<Style x:Key="w18" BasedOn="{StaticResource Base}" TargetType="{x:Type Button}">
+						<Setter Property="Width" Value="18" />
+						<Setter Property="Height" Value="18" />
+					</Style>
+					<Style x:Key="BAxis" BasedOn="{StaticResource Base}" TargetType="{x:Type Button}">
+						<Setter Property="Width" Value="10" />
+						<Setter Property="Height" Value="10" />
+					</Style>
+					<Style TargetType="{x:Type Image}">
+						<Setter Property="HorizontalAlignment" Value="Left" />
+						<Setter Property="VerticalAlignment" Value="Top" />
+						<Setter Property="Stretch" Value="Fill" />
+					</Style>
+					<Style x:Key="M" TargetType="{x:Type ContentControl}">
+						<Setter Property="Opacity" Value="0.6" />
+						<Setter Property="VerticalAlignment" Value="Stretch" />
+						<Setter Property="HorizontalAlignment" Value="Stretch" />
+					</Style>
+					<Style x:Key="Nav" TargetType="{x:Type Grid}">
+						<Setter Property="VerticalAlignment" Value="Top" />
+						<Setter Property="HorizontalAlignment" Value="Center" />
+						<Setter Property="Width" Value="54" />
+						<Setter Property="Height" Value="54" />
+					</Style>
+
+				</ResourceDictionary>
+			</ResourceDictionary.MergedDictionaries>
+		</ResourceDictionary>
+	</UserControl.Resources>
+	<Grid x:Name="MainGrid">
 		<StackPanel Orientation="Vertical">
-			<Image x:Name="TopPictureBox" Width="256" Height="105" />
+			<Image
+				x:Name="TopPictureBox"
+				Width="256"
+				Height="105"
+				Source="/x360ce;component/Images/xboxControllerTop.png" />
 			<StackPanel Height="8" />
-			<Image x:Name="FrontPictureBox" Width="256" Height="176" />
+			<Image
+				x:Name="FrontPictureBox"
+				Width="256"
+				Height="176"
+				Source="/x360ce;component/Images/xboxControllerFront.png" />
 		</StackPanel>
+		<Grid
+			Width="146"
+			Height="18"
+			Margin="0,18,0,0"
+			Style="{StaticResource Nav}">
+			<Button
+				x:Name="LeftTrigger"
+				HorizontalAlignment="Left"
+				Click="Button_Click"
+				Style="{StaticResource w18}">
+				<ContentControl Content="{StaticResource NavNormal}" Style="{StaticResource M}" />
+			</Button>
+			<Button
+				x:Name="RightTrigger"
+				HorizontalAlignment="Right"
+				Click="Button_Click"
+				Style="{StaticResource w18}">
+				<ContentControl Content="{StaticResource NavNormal}" Style="{StaticResource M}" />
+			</Button>
+		</Grid>
+		<Grid
+			Width="188"
+			Height="18"
+			Margin="0,58,0,0"
+			Style="{StaticResource Nav}">
+			<Button
+				x:Name="LeftShoulder"
+				HorizontalAlignment="Left"
+				Click="Button_Click"
+				Style="{StaticResource w18}">
+				<ContentControl Content="{StaticResource NavNormal}" Style="{StaticResource M}" />
+			</Button>
+			<Button
+				x:Name="RightShoulder"
+				HorizontalAlignment="Right"
+				Click="Button_Click"
+				Style="{StaticResource w18}">
+				<ContentControl Content="{StaticResource NavNormal}" Style="{StaticResource M}" />
+			</Button>
+		</Grid>
+		<Grid Margin="-137,133,0,0" Style="{StaticResource Nav}">
+			<Button
+				x:Name="LeftThumbUp"
+				VerticalAlignment="Top"
+				Click="Button_Click"
+				Style="{StaticResource w18}">
+				<ContentControl Content="{StaticResource NavUpNormal}" Style="{StaticResource M}" />
+			</Button>
+			<Button
+				x:Name="LeftThumbLeft"
+				HorizontalAlignment="Left"
+				Click="Button_Click"
+				Style="{StaticResource w18}">
+				<ContentControl Content="{StaticResource NavLeftNormal}" Style="{StaticResource M}" />
+			</Button>
+			<ContentControl
+				x:Name="LeftThumb"
+				Width="10"
+				Height="10"
+				Content="{StaticResource NavAxisActive}"
+				Opacity="1.0"
+				Style="{StaticResource M}" />
+			<Button x:Name="LeftThumbButton" Click="Button_Click" Style="{StaticResource w18}">
+				<ContentControl Content="{StaticResource NavNormal}" Style="{StaticResource M}" />
+			</Button>
+			<Button
+				x:Name="LeftThumbRight"
+				HorizontalAlignment="Right"
+				Click="Button_Click"
+				Style="{StaticResource w18}">
+				<ContentControl Content="{StaticResource NavRightNormal}" Style="{StaticResource M}" />
+			</Button>
+			<Button
+				x:Name="LeftThumbDown"
+				VerticalAlignment="Bottom"
+				Click="Button_Click"
+				Style="{StaticResource w18}">
+				<ContentControl Content="{StaticResource NavDownNormal}" Style="{StaticResource M}" />
+			</Button>
+		</Grid>
+		<Grid
+			Width="68"
+			Height="18"
+			Margin="0,153,0,0"
+			Style="{StaticResource Nav}">
+			<Button
+				x:Name="ButtonBack"
+				HorizontalAlignment="Left"
+				Click="Button_Click"
+				Style="{StaticResource w18}">
+				<ContentControl Content="{StaticResource NavNormal}" Style="{StaticResource M}" />
+			</Button>
+			<Button x:Name="ButtonGuide" Click="Button_Click" Style="{StaticResource w18}">
+				<ContentControl Content="{StaticResource NavNormal}" Style="{StaticResource M}" />
+			</Button>
+			<Button
+				x:Name="ButtonStart"
+				HorizontalAlignment="Right"
+				Click="Button_Click"
+				Style="{StaticResource w18}">
+				<ContentControl Content="{StaticResource NavNormal}" Style="{StaticResource M}" />
+			</Button>
+		</Grid>
+		<Grid Margin="137,133,0,0" Style="{StaticResource Nav}">
+			<Button
+				x:Name="ButtonY"
+				VerticalAlignment="Top"
+				Click="Button_Click"
+				Style="{StaticResource w18}">
+				<ContentControl Content="{StaticResource NavNormal}" Style="{StaticResource M}" />
+			</Button>
+			<Button
+				x:Name="ButtonX"
+				HorizontalAlignment="Left"
+				Click="Button_Click"
+				Style="{StaticResource w18}">
+				<ContentControl Content="{StaticResource NavNormal}" Style="{StaticResource M}" />
+			</Button>
+			<Button
+				x:Name="ButtonA"
+				HorizontalAlignment="Right"
+				Click="Button_Click"
+				Style="{StaticResource w18}">
+				<ContentControl Content="{StaticResource NavNormal}" Style="{StaticResource M}" />
+			</Button>
+			<Button
+				x:Name="ButtonB"
+				VerticalAlignment="Bottom"
+				Click="Button_Click"
+				Style="{StaticResource w18}">
+				<ContentControl Content="{StaticResource NavNormal}" Style="{StaticResource M}" />
+			</Button>
+		</Grid>
+		<Grid Margin="64,174,0,0" Style="{StaticResource Nav}">
+			<Button
+				x:Name="RightThumbUp"
+				VerticalAlignment="Top"
+				Click="Button_Click"
+				Style="{StaticResource w18}">
+				<ContentControl Content="{StaticResource NavUpNormal}" Style="{StaticResource M}" />
+			</Button>
+			<Button
+				x:Name="RightThumbLeft"
+				HorizontalAlignment="Left"
+				Click="Button_Click"
+				Style="{StaticResource w18}">
+				<ContentControl Content="{StaticResource NavLeftNormal}" Style="{StaticResource M}" />
+			</Button>
+			<ContentControl
+				x:Name="RightThumb"
+				Width="10"
+				Height="10"
+				Content="{StaticResource NavAxisActive}"
+				Opacity="1.0"
+				Style="{StaticResource M}" />
+			<Button x:Name="RightThumbButton" Click="Button_Click" Style="{StaticResource w18}">
+				<ContentControl Content="{StaticResource NavNormal}" Style="{StaticResource M}" />
+			</Button>
+			<Button
+				x:Name="RightThumbRight"
+				HorizontalAlignment="Right"
+				Click="Button_Click"
+				Style="{StaticResource w18}">
+				<ContentControl Content="{StaticResource NavRightNormal}" Style="{StaticResource M}" />
+			</Button>
+			<Button
+				x:Name="RightThumbDown"
+				VerticalAlignment="Bottom"
+				Click="Button_Click"
+				Style="{StaticResource w18}">
+				<ContentControl Content="{StaticResource NavDownNormal}" Style="{StaticResource M}" />
+			</Button>
+		</Grid>
+		<Grid Margin="-72,174,0,0" Style="{StaticResource Nav}">
+			<Button
+				x:Name="DPadUp"
+				VerticalAlignment="Top"
+				Click="Button_Click"
+				Style="{StaticResource w18}">
+				<ContentControl Content="{StaticResource NavUpNormal}" Style="{StaticResource M}" />
+			</Button>
+			<Button
+				x:Name="DPadLeft"
+				HorizontalAlignment="Left"
+				Click="Button_Click"
+				Style="{StaticResource w18}">
+				<ContentControl Content="{StaticResource NavLeftNormal}" Style="{StaticResource M}" />
+			</Button>
+			<Button x:Name="DPad" Click="Button_Click" Style="{StaticResource w18}">
+				<ContentControl Content="{StaticResource NavNormal}" Style="{StaticResource M}" />
+			</Button>
+			<Button
+				x:Name="DPadRight"
+				HorizontalAlignment="Right"
+				Click="Button_Click"
+				Style="{StaticResource w18}">
+				<ContentControl Content="{StaticResource NavRightNormal}" Style="{StaticResource M}" />
+			</Button>
+			<Button
+				x:Name="DPadDown"
+				VerticalAlignment="Bottom"
+				Click="Button_Click"
+				Style="{StaticResource w18}">
+				<ContentControl Content="{StaticResource NavDownNormal}" Style="{StaticResource M}" />
+			</Button>
+		</Grid>
 	</Grid>
 </UserControl>
